--- a/WebUber/WebUber.csproj
+++ b/WebUber/WebUber.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="imagenes\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
